--- a/bulletin/templates/bulletin/base.html
+++ b/bulletin/templates/bulletin/base.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>{% block title %}Django Auth Tutorial{% endblock %}</title>
+    <title>{% block title %}Campus Connect{% endblock %}</title>
   </head>
   <style>
     .chat-message {
@@ -19,7 +19,6 @@
     }
     .card{
       max-width: initial;
-
     }
     .card-block{
       padding: 28px 20px;
@@ -27,22 +26,19 @@
     .jumbotron{
       background-color: white;
     }
-  
   </style>
   <body>
-    {% block header%}
+    {% block header %}
     <div class="alert alert-danger" role="alert">
-        Hi <b>{{ user.username }}</b>, Welcome to Chatapp
-      </div>
-      <br/>
-      
+        Hi <b>{{ user.username }}</b>, Welcome to Campus Connect
+    </div>
+    <br/>
     {% endblock %}
 
     <main>
       {% block content %}
       {% endblock %}
     </main>
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
