--- a/bulletin/templates/bulletin/index.html
+++ b/bulletin/templates/bulletin/index.html
@@ -2,285 +2,104 @@
 {% load static %}
 {% block title %}Campus Connect{% endblock %}
 {% block content %}
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campus Connect</title>
-    <style>
-        /* Reset styles */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: sans-serif;
-            outline: none;
-            border: none;
-            text-decoration: none;
-            text-transform: capitalize;
-            transition: .2s linear;
-        }
-
-        html,
-        body {
-            height: 100%;
-            width: 100%;
-            background: rgb(198, 198, 198);
-        }
-
-        nav {
-            padding: 10px 30px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            background: rgb(255, 132, 0);
-            position: relative;
-            height: 70px;
-        }
-
-        .Logo img {
-            height: 45px;
-            width: 45px;
-        }
-
-        nav ul {
-            display: flex;
-            gap: 30px;
-            align-items: center;
-        }
-
-        nav ul li {
-            list-style-type: none;
-        }
-
-        nav ul li a {
-            text-decoration: none;
-            color: #fff;
-        }
-
-        .menu-icon {
-            display: none;
-        }
-
-        .menu-icon i {
-            color: #fff;
-            font-size: 30px;
-        }
-
-        @media (max-width: 600px) {
-            nav ul {
-                position: absolute;
-                top: 70px;
-                left: 0;
-                right: 0;
-                flex-direction: column;
-                text-align: center;
-                background: #004274;
-                gap: 0;
-                overflow: hidden;
-            }
-
-            nav ul li {
-                padding: 20px;
-                padding-top: 0;
-            }
-
-            .menu-icon {
-                display: block;
-            }
-
-            #menuList {
-                transition: all 0.5s;
-            }
-        }
-
-        .title-header {
-            margin: 25px;
-            padding: 10px 30px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .container {
-            background: linear-gradient(45deg, blueviolet, lightgreen);
-            padding: 15px 9%;
-            padding-bottom: 100px;
-        }
-
-        .container .heading {
-            text-align: center;
-            padding-bottom: 15px;
-            color: #fff;
-            text-shadow: 0 5px 10px rgba(0, 0, 0, .2);
-            font-size: 50px;
-        }
-
-        .container .box-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
-            gap: 15px;
-        }
-
-        .container .box-container .box {
-            box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
-            border-radius: 5px;
-            background: #fff;
-            text-align: center;
-            padding: 30px 20px;
-        }
-
-        .container .box-container .box img {
-            height: 80px;
-        }
-
-        .container .box-container .box h3 {
-            color: #444;
-            font-size: 22px;
-            padding: 10px 0;
-        }
-
-        .container .box-container .box p {
-            color: #777;
-            font-size: 15px;
-            line-height: 1.8;
-        }
-
-        .container .box-container .box .btn {
-            margin-top: 10px;
-            display: inline-block;
-            background: #333;
-            color: #fff;
-            font-size: 17px;
-            border-radius: 5px;
-            padding: 8px 25px;
-        }
-
-        .container .box-container .box .btn:hover {
-            letter-spacing: 1px;
-        }
-
-        .container .box-container .box:hover {
-            box-shadow: 0 10px 15px rgba(0, 0, 0, .3);
-            transform: scale(1.03);
-        }
-
-        @media (max-width: 768px) {
-            .container {
-                padding: 20px;
-            }
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 20px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-
-        .footer-content {
-            font-size: 0.8rem;
-        }
-
-        .content {
-            padding-bottom: 60px;
-            /* Adjust as needed */
-        }
-    </style>
-</head>
-
-<body>
-    <nav>
-        <div class="Logo">
-            <img src="{% static 'bulletin/images/logo.jpg' %}" alt="Logo">
+<div class="container my-5">
+    <!-- Alert messages section -->
+    {% if messages %}
+        <div class="alert-container">
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            {% endfor %}
         </div>
-        <ul id="menuList">
-            <li><a href="{% url 'rooms' %}">Chat</a></li>
-            <li><a href="#">Placement</a></li>
-            <li><a href="{% url 'add_event' %}">Event</a></li>
-            <li><a href="#">Contact Us</a></li>
-        </ul>
-        <div class="menu-icon">
-            <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
-        </div>
-    </nav>
-    <div class="title-header">
+    {% endif %}
+
+    <div class="text-center mb-5">
         <h1>Campus Connect</h1>
     </div>
-    <div class="container">
-
-        <h1 class="heading">College News</h1>
-
-        <div class="box-container">
-
-            <div class="box">
-                <img src="{% static 'bulletin/images/presentation.jpg' %}" alt="Presentation">
-                <h3>Presentation</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
-                <a href="#" class="btn">read more</a>
-            </div>
-
-            <div class="box">
-                <img src="{% static 'bulletin/images/cultural.png'%}" alt="Cultural Event">
-                <h3>Cultural Event</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
-                <a href="#" class="btn">read more</a>
-            </div>
-
-            <div class="box">
-                <img src="{% static 'bulletin/images/Placement.jpg'%}" alt="Placement">
-                <h3>Placement</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
-                <a href="#" class="btn">read more</a>
-            </div>
-
-            <div class="box">
-                <img src="{% static 'bulletin/images/sportss.jpeg'%}" alt="Sports Event">
-                <h3>Sports Event</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
-                <a href="#" class="btn">read more</a>
-            </div>
-
-            <div class="box">
-                <img src="{% static 'bulletin/images/habba.jpeg'%}" alt="Habba Event">
-                <h3>Habba Event</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
-                <a href="#" class="btn">read more</a>
-            </div>
-
-            <div class="box">
-                <img src="{% static 'bulletin/images/steigen.jpeg'%}" alt="Technical Event">
-                <h3>Technical Event</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
-                <a href="#" class="btn">read more</a>
-            </div>
-
-        </div>
-
+    <div class="text-center mb-5">
+        <h1 class="display-4">College News</h1>
     </div>
-    <footer>
-        <div class="footer-content">
-            <p>&copy; 2024 Campus Connect. All rights reserved.</p>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+            <div class="card h-100">
+                <img src="{% static 'bulletin/images/presentation.jpg' %}" class="card-img-top" alt="Presentation">
+                <div class="card-body">
+                    <h5 class="card-title">Presentation</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
+                    <a href="#" class="btn btn-dark">Read more</a>
+                </div>
+            </div>
         </div>
-    </footer>
+        <div class="col">
+            <div class="card h-100">
+                <img src="{% static 'bulletin/images/cultural.png' %}" class="card-img-top" alt="Cultural Event">
+                <div class="card-body">
+                    <h5 class="card-title">Cultural Event</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
+                    <a href="#" class="btn btn-dark">Read more</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="{% static 'bulletin/images/Placement.jpg' %}" class="card-img-top" alt="Placement">
+                <div class="card-body">
+                    <h5 class="card-title">Placement</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
+                    <a href="#" class="btn btn-dark">Read more</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="{% static 'bulletin/images/sportss.jpeg' %}" class="card-img-top" alt="Sports Event">
+                <div class="card-body">
+                    <h5 class="card-title">Sports Event</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
+                    <a href="#" class="btn btn-dark">Read more</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="{% static 'bulletin/images/habba.jpeg' %}" class="card-img-top" alt="Habba Event">
+                <div class="card-body">
+                    <h5 class="card-title">Habba Event</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
+                    <a href="#" class="btn btn-dark">Read more</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="{% static 'bulletin/images/steigen.jpeg' %}" class="card-img-top" alt="Technical Event">
+                <div class="card-body">
+                    <h5 class="card-title">Technical Event</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
+                    <a href="#" class="btn btn-dark">Read more</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
-    <script>
-        let menuList = document.getElementById("menuList")
-        menuList.style.maxHeight = "0px";
+<footer class="bg-dark text-white text-center py-3">
+    <div class="footer-content">
+        <p>&copy; 2024 Campus Connect. All rights reserved.</p>
+    </div>
+</footer>
 
-        function toggleMenu() {
-            if (menuList.style.maxHeight == "0px") {
-                menuList.style.maxHeight = "300px";
-            } else {
-                menuList.style.maxHeight = "0px";
-            }
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    function toggleMenu() {
+        let menuList = document.getElementById("navbarNav");
+        if (menuList.classList.contains("show")) {
+            menuList.classList.remove("show");
+        } else {
+            menuList.classList.add("show");
         }
-    </script>
-</body>
-</html>
+    }
+</script>
 {% endblock %}
