--- a/bulletin/templates/bulletin/base.html
+++ b/bulletin/templates/bulletin/base.html
@@ -4,8 +4,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <!-- Load static template tag library -->
     {% load static %}
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
@@ -43,6 +45,12 @@
       {% block content %}
       {% endblock %}
     </main>
+
+    <footer class="bg-dark text-white text-center py-3">
+        <div class="footer-content">
+            <p>&copy; 2024 Campus Connect. All rights reserved.</p>
+        </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
