--- a/bulletin/templates/bulletin/base.html
+++ b/bulletin/templates/bulletin/base.html
@@ -26,10 +26,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'rooms' %}">Chat</a>
+                        <a class="nav-link" href="#">Announcement</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Placement</a>
+                        <a class="nav-link" href="{% url 'placements' %}">Placement</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'add_event' %}">Event</a>
