--- a/bulletin/templates/bulletin/base.html
+++ b/bulletin/templates/bulletin/base.html
@@ -37,6 +37,17 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact Us</a>
                     </li>
+                    {% if user.is_authenticated %}        
+                    <li class = "nav-item">
+                        <!-- Logout Form -->
+                        <form method="POST" action="{% url 'logout' %}" style="display: inline;">
+                            {% csrf_token %}
+                            <button type="submit" class="nav-item nav-link btn btn-link" style="display: inline; border: none; background: none; padding-top:2 ;">Logout</button>
+                        </form>
+                    {% else %}
+                        <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                    {% endif %}
+                    </li>
                 </ul>
             </div>
         </div>
