--- a/bulletin/templates/bulletin/base.html
+++ b/bulletin/templates/bulletin/base.html
@@ -8,50 +8,84 @@
     <!-- Load static template tag library -->
     {% load static %}
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-
+    <link rel="stylesheet" type="text/css" href="{% static 'announcements/a_main.css' %}">
     <title>{% block title %}Campus Connect{% endblock %}</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-warning">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand " href="{% url 'home' %}">
                 <img src="{% static 'bulletin/images/logo.jpg' %}" alt="Logo" height="45" width="45">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <!-- Navbar toggler -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Announcement</a>
+                    <li class="nav-item mt-1">
+                        <a class="nav-link" href="{% url 'a_home' %}">Announcement</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item mt-1">
                         <a class="nav-link" href="{% url 'placements' %}">Placement</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item mt-1">
                         <a class="nav-link" href="{% url 'add_event' %}">Event</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item mt-1">
                         <a class="nav-link" href="#">Contact Us</a>
                     </li>
-                    {% if user.is_authenticated %}        
-                    <li class = "nav-item">
-                        <!-- Logout Form -->
-                        <form method="POST" action="{% url 'logout' %}" style="display: inline;">
-                            {% csrf_token %}
-                            <button type="submit" class="nav-item nav-link btn btn-link" style="display: inline; border: none; background: none; padding-top:2 ;">Logout</button>
-                        </form>
-                    {% else %}
-                        <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                    
+                    {% if user.is_authenticated %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <img src="{{ user.profile.image.url }}" class="rounded-circle mr-2" width="35" height="35">
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
+                                <a class="dropdown-item" href="{% url 'a_profile' %}">
+                                    <i class="fas fa-user mr-2"></i>Profile
+                                </a>
+                                <div class="dropdown-divider"></div>
+                                <form method="POST" action="{% url 'logout' %}" class="dropdown-item p-0">
+                                    {% csrf_token %}
+                                    <button type="submit" class="dropdown-item">
+                                        <i class="fas fa-sign-out-alt mr-2"></i>Logout
+                                    </button>
+                                </form>
+                            </div>
+                        </li>
+                        {% else %}
+                        <li class="nav-item mt-1">
+                            <a class="nav-link" href="{% url 'login' %}">Login</a>
+                        </li>
                     {% endif %}
-                    </li>
                 </ul>
             </div>
         </div>
     </nav>
+    <main role="main" class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <!--just right above our content block we will print messages -->
+            {% block announcement %}{% endblock announcement %}
+          </div>
+        </div>
+    </main>
+    {% if messages %}
+        <div class="container mt-3">
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
     <main class="container-fluid p-0">
       {% block content %}
       {% endblock %}
@@ -65,5 +99,9 @@
 
     <!-- Optional JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+    <!-- Add these just before closing </body> tag -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
+</body>
 </html>
