--- a/bulletin/templates/bulletin/base.html
+++ b/bulletin/templates/bulletin/base.html
@@ -17,8 +17,9 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-warning">
         <div class="container-fluid">
-            <a class="navbar-brand " href="{% url 'home' %}">
-                <img src="{% static 'bulletin/images/logo.jpg' %}" alt="Logo" height="45" width="45">
+            <a class="navbar-brand d-flex align-items-center " href="{% url 'home' %}">
+                <img src="{% static 'bulletin/images/logo.jpg' %}" alt="Logo" height="50" width="50">
+                <span class="ml-3 ms-2 fw-bold "><h3>Campus Connect</h3></span>
             </a>
             <!-- Navbar toggler -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
@@ -45,7 +46,7 @@
                                 <img src="{{ user.profile.image.url }}" class="rounded-circle mr-2" width="35" height="35">
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="{% url 'a_profile' %}">
+                                <a class="dropdown-item" href="{% url 'profile' %}">
                                     <i class="fas fa-user mr-2"></i>Profile
                                 </a>
                                 <div class="dropdown-divider"></div>
@@ -97,8 +98,6 @@
         </div>
     </footer>
 
-    <!-- Optional JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Add these just before closing </body> tag -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
