--- a/bulletin/templates/bulletin/index.html
+++ b/bulletin/templates/bulletin/index.html
@@ -4,10 +4,7 @@
 {% block content %}
 <div class="container my-5">
     <div class="text-center mb-5">
-        <h1>Campus Connect</h1>
-    </div>
-    <div class="text-center mb-5">
-        <h1 class="display-4">College News</h1>
+        <h1>College News</h1>
     </div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
