--- a/bulletin/templates/bulletin/index.html
+++ b/bulletin/templates/bulletin/index.html
@@ -38,7 +38,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Cultural Event</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
-                    <a href="#" class="btn btn-dark">Read more</a>
+                    <a href="cultural/" class="btn btn-dark">Read more</a>
                 </div>
             </div>
         </div>
@@ -48,7 +48,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Placement</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
-                    <a href="#" class="btn btn-dark">Read more</a>
+                    <a href="placements/" class="btn btn-dark">Read more</a>
                 </div>
             </div>
         </div>
@@ -58,7 +58,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Sports Event</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
-                    <a href="#" class="btn btn-dark">Read more</a>
+                    <a href="sports/" class="btn btn-dark">Read more</a>
                 </div>
             </div>
         </div>
@@ -68,7 +68,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Habba Event</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
-                    <a href="#" class="btn btn-dark">Read more</a>
+                    <a href="habba/" class="btn btn-dark">Read more</a>
                 </div>
             </div>
         </div>
@@ -78,7 +78,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Technical Event</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
-                    <a href="#" class="btn btn-dark">Read more</a>
+                    <a href="technical/" class="btn btn-dark">Read more</a>
                 </div>
             </div>
         </div>
