--- a/bulletin/templates/bulletin/base.html
+++ b/bulletin/templates/bulletin/base.html
@@ -14,37 +14,45 @@
     <title>{% block title %}Campus Connect{% endblock %}</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="{% static 'bulletin/images/logo.jpg' %}" alt="Logo" height="45" width="45">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Announcement</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'placements' %}">Placement</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'add_event' %}">Event</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
-                    </li>
-                </ul>
-            </div>
+   <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img src="{% static 'bulletin/images/logo.jpg' %}" alt="Logo" height="45" width="45">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Announcement</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'placements' %}">Placement</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'add_event' %}">Event</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
+                </li>
+            </ul>
         </div>
-    </nav>
-    <main class="container-fluid p-0">
-      {% block content %}
-      {% endblock %}
-    </main>
+    </div>
+</nav>
+
+<div class="position-relative bg-dark text-white" style="background-image: url('{% static 'bulletin/images/technical.jpg' %}'); background-size: cover; background-position: center; height: 100vh;">
+    <div class="d-flex align-items-center justify-content-center h-100 bg-dark bg-opacity-50">
+        <h1 class="display-3">Welcome to Campus Connect</h1>
+    </div>
+</div>
+
+<main class="container-fluid p-0">
+  {% block content %}
+  {% endblock %}
+</main>
+
 
     <footer class="bg-dark text-white text-center py-3">
         <div class="footer-content">
