--- a/bulletin/templates/bulletin/index.html
+++ b/bulletin/templates/bulletin/index.html
@@ -15,9 +15,7 @@
         </div>
     {% endif %}
 
-    <div class="text-center mb-5">
-        <h1>Campus Connect</h1>
-    </div>
+    
     <div class="text-center mb-5">
         <h1 class="display-4">College News</h1>
     </div>
@@ -26,9 +24,9 @@
             <div class="card h-100">
                 <img src="{% static 'bulletin/images/presentation.jpg' %}" class="card-img-top" alt="Presentation">
                 <div class="card-body">
-                    <h5 class="card-title">Presentation</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
-                    <a href="#" class="btn btn-dark">Read more</a>
+                    <h5 class="card-title">About College</h5>
+                    <p class="card-text">Our college is a hub of academic excellence and innovation, committed to nurturing future leaders. With state-of-the-art facilities, experienced faculty, and a vibrant campus life, we provide a holistic learning experience that prepares students for global challenges.</p>
+                    <a href="about/" class="btn btn-dark">Read more</a>
                 </div>
             </div>
         </div>
@@ -37,7 +35,7 @@
                 <img src="{% static 'bulletin/images/cultural.png' %}" class="card-img-top" alt="Cultural Event">
                 <div class="card-body">
                     <h5 class="card-title">Cultural Event</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
+                    <p class="card-text">Our cultural events celebrate diversity and creativity, offering students a platform to showcase their talents. From music and dance performances to art exhibitions and literary fests, these events foster a vibrant and inclusive community spirit</p>
                     <a href="cultural/" class="btn btn-dark">Read more</a>
                 </div>
             </div>
@@ -47,7 +45,7 @@
                 <img src="{% static 'bulletin/images/Placement.jpg' %}" class="card-img-top" alt="Placement">
                 <div class="card-body">
                     <h5 class="card-title">Placement</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
+                    <p class="card-text">Our placement cell connects students with leading organizations, offering a gateway to promising careers. With dedicated training programs, workshops, and career counseling, we ensure our students are industry-ready and excel in their chosen fields.</p>
                     <a href="placements/" class="btn btn-dark">Read more</a>
                 </div>
             </div>
@@ -57,7 +55,7 @@
                 <img src="{% static 'bulletin/images/sportss.jpeg' %}" class="card-img-top" alt="Sports Event">
                 <div class="card-body">
                     <h5 class="card-title">Sports Event</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
+                    <p class="card-text">Sports events at our college promote teamwork, fitness, and sportsmanship. With a range of indoor and outdoor games, these events inspire students to stay active, build resilience, and achieve excellence on and off the field.</p>
                     <a href="sports/" class="btn btn-dark">Read more</a>
                 </div>
             </div>
@@ -67,7 +65,7 @@
                 <img src="{% static 'bulletin/images/habba.jpeg' %}" class="card-img-top" alt="Habba Event">
                 <div class="card-body">
                     <h5 class="card-title">Habba Event</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
+                    <p class="card-text">The Habba event is the most awaited annual festival, combining culture, fun, and excitement. It features a blend of performances, competitions, and food stalls, making it a grand celebration of talent and camaraderie</p>
                     <a href="habba/" class="btn btn-dark">Read more</a>
                 </div>
             </div>
@@ -77,7 +75,7 @@
                 <img src="{% static 'bulletin/images/steigen.jpeg' %}" class="card-img-top" alt="Technical Event">
                 <div class="card-body">
                     <h5 class="card-title">Technical Event</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, commodi?</p>
+                    <p class="card-text">Technical events at our college encourage innovation and problem-solving. From hackathons and coding competitions to robotics and tech talks, these events provide students with opportunities to enhance their skills and showcase their expertise.</p>
                     <a href="technical/" class="btn btn-dark">Read more</a>
                 </div>
             </div>
