--- a/bulletin/templates/bulletin/base.html
+++ b/bulletin/templates/bulletin/base.html
@@ -14,29 +14,30 @@
     <title>{% block title %}Campus Connect{% endblock %}</title>
   </head>
   <body>
-   <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <img src="{% static 'bulletin/images/logo.jpg' %}" alt="Logo" height="45" width="45">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Announcement</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'placements' %}">Placement</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'add_event' %}">Event</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
-                </li>
+    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+        <div class="container-fluid">
+            <a class="navbar-brand d-flex align-items-center " href="{% url 'home' %}">
+                <img src="{% static 'bulletin/images/logo.jpg' %}" alt="Logo" height="50" width="50">
+                <span class="ml-3 ms-2 fw-bold "><h3>Campus Connect</h3></span>
+            </a>
+            <!-- Navbar toggler -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item mt-1">
+                        <a class="nav-link" href="#">Announcement</a>
+                    </li>
+                    <li class="nav-item mt-1">
+                        <a class="nav-link" href="{% url 'placements' %}">Placement</a>
+                    </li>
+                    <li class="nav-item mt-1">
+                        <a class="nav-link" href="{% url 'add_event' %}">Event</a>
+                    </li>
+                    <li class="nav-item mt-1">
+                        <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
+                    </li>
             </ul>
         </div>
     </div>
