--- a/bulletin/templates/bulletin/sports.html
+++ b/bulletin/templates/bulletin/sports.html
@@ -245,7 +245,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Spirit Fest. All rights reserved.</p>
+            <p>&copy; 2024 Campus Connect. All rights reserved.</p>
         </div>
     </footer>
 
