--- a/bulletin/templates/bulletin/about.html
+++ b/bulletin/templates/bulletin/about.html
@@ -31,7 +31,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-warning">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="{% url 'home' %}">
                 <img src="{% static 'bulletin/images/logo.jpg' %}" alt="Logo" height="45" width="45"> Acharya Institutes
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
