--- a/bulletin/templates/bulletin/cultural.html
+++ b/bulletin/templates/bulletin/cultural.html
@@ -159,7 +159,7 @@
 
     <!-- Footer -->
     <div class="footer mt-5">
-        <p>&copy; 2024 College Name. All Rights Reserved. </p>
+        <p>&copy; 2024 Campus Connect. All Rights Reserved. </p>
     </div>
 
     <!-- Bootstrap JS -->
