--- a/bulletin/templates/bulletin/habba.html
+++ b/bulletin/templates/bulletin/habba.html
@@ -266,7 +266,7 @@
 
     <div class="footer">
         <p>
-          &copy; 2024 College Name. All Rights Reserved. |
+          &copy; 2024 Campus Connect. All Rights Reserved. |
           
         </p>
       </div>
