--- a/bulletin/templates/bulletin/placement.html
+++ b/bulletin/templates/bulletin/placement.html
@@ -73,7 +73,7 @@
 
     <div class="footer">
         <p>
-          &copy; 2024 College Name. All Rights Reserved. |
+          &copy; 2024 Campus Connect. All Rights Reserved. |
           
         </p>
       </div>
