--- a/announcements/templates/announcements/base.html
+++ b/announcements/templates/announcements/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" type="text/css" href="{% static 'announcements/a_main.css' %}">
     <title>{% block title %}Campus Connect{% endblock %}</title>
   </head>
   <body>
@@ -78,11 +79,18 @@
             {% endfor %}
         </div>
     {% endif %}
-
-    <main class="container-fluid p-0">
-      {% block content %}
-      {% endblock %}
+    <section class="min-vh-100 w-100" style="background-color: #eee;">
+    <div class="container-fluid py-5" style="max-width: 98%;">
+    <main role="main" class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <!--just right above our content block we will print messages -->
+            {% block announcement %}{% endblock announcement %}
+          </div>
+        </div>
     </main>
+    </div>
+    </section>
 
     <footer class="bg-dark text-white text-center py-3">
         <div class="footer-content">
