--- a/bulletin/templates/bulletin/index.html
+++ b/bulletin/templates/bulletin/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="{% static 'bulletin/images/cultural.png' %}" class="card-img-top" alt="Cultural Event">
+                <img src="{% static 'bulletin/images/cultural2.jpg' %}" class="card-img-top" alt="Cultural Event">
                 <div class="card-body">
                     <h5 class="card-title">Cultural Event</h5>
                     <p class="card-text">Our cultural events celebrate diversity and creativity, offering students a platform to showcase their talents. From music and dance performances to art exhibitions and literary fests, these events foster a vibrant and inclusive community spirit</p>
