--- a/bulletin/templates/bulletin/contact.html
+++ b/bulletin/templates/bulletin/contact.html
@@ -1,64 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    {% load static %}
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
-    />
+{% extends "bulletin/base.html" %}
 
-    <title>Contact Us</title>
-  </head>
+{% block content %}
+{% load static %}
+{% block image %}
+<!-- Empty block to prevent base.html's image block from rendering -->
+{% endblock image %}
+
+  <title>Contact Us</title>
   <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}">
-          <img src="{% static 'bulletin/images/logo.jpg' %}" alt="Logo" height="45" width="45" />
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="">Announcement</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'placements' %}">Placement</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'add_event' %}">Event</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
+    
     <!-- Content -->
     <div class="container my-5">
       <div class="text-center mb-5">
@@ -187,12 +137,7 @@
   </div>
     </div>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-white text-center py-3">
-      <div class="footer-content">
-        <p>&copy; 2024 Campus Connect. All rights reserved.</p>
-      </div>
-    </footer>
+   
 
     <!-- Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
@@ -213,3 +158,4 @@
     </script>
   </body>
 </html>
+{% endblock content %}
